removed DecimalMinutes, introduced Decimal math, fixed the math to work; mostly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 chrono = "0.4.23"
 chrono-tz = "0.8.1"
 derive_more = "0.99.17"
+rust_decimal = "1.29.1"
+rust_decimal_macros = "1.29.1"
